--- a/my-app/index.html
+++ b/my-app/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/png" href="/logo-icon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Welcome to boat store! The place where luxury and performance meets boating!">
     <title>Boat store</title>
 </head>
 <body>
 <div id="root"></div>
-<script type="module" src="/src/main.tsx"></script>
+<script type="module" src="./src/main.tsx"></script>
 </body>
 </html>
